<resources>
    <string name="app_name" translatable="false">Time2Watch</string>
    <string name="poster_description">Poster</string>
    <string name="release_date">Release date : %1$s</string>
    <string name="vote_average">Vote average : %1$s/10</string>
    <string name="overview">Overview : %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_filters">Filters</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_tvshows">TV shows</string>
    <string name="trending_movies_period">Trending movies of the…</string>
    <string name="trending_tvshows_period">Trending TV shows of the…</string>
    <string name="week_period">week</string>
    <string name="day_period">day</string>
    <string name="about_text">This app was created by Florian Savouré and Antoine Delahaye in connection with the IT department of University of Orléans.</string>
    <string name="florian_mail" translatable="false">florian.savoure2@gmail.com</string>
    <string name="antoine_mail" translatable="false">antoine.delahaye24.01@gmail.com</string>
    <string name="menu_about">About</string>
    <string name="created_by">"Created by : "</string>
    <string name="number_of_episodes">Number of episodes : %1$s</string>
    <string name="number_of_seasons">Number of seasons : %1$s</string>
    <string name="budget">"Budget : "</string>
    <string name="unknown">Unknown</string>
    <string name="genres">Genres :</string>
    <string name="production_compagnies">Production compagnies :</string>
    <string name="original_language">Original language : %1$s</string>
    <string name="original_title">Original title : %1$s</string>
    <string name="first_air_date">Number of episodes : %1$s</string>
    <string name="menu_search">Search</string>
</resources>